driver_app/src/index.css
@import url("https://fonts.googleapis.com/css2?family=Barlow:wght@400;500;600;700&display=swap");

@tailwind base;
@tailwind components;
@tailwind utilities;

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    scroll-behavior: smooth;
}

@media (prefers-color-scheme: light) {
    :root {
        color: #213547;
        background-color: #ffffff;
    }
    a:hover {
        color: #747bff;
    }
    button {
        background-color: #f9f9f9;
    }
}

.container {
    width: 100%;
    max-width: 1440px;
    margin: 0 auto;
    padding: 0px;
}

@layer base {
    html {
        font-family: "Barlow";
    }
}

@layer components {
    .max-container {
        max-width: 1440px;
        margin: 0 auto;
    }
}

@layer utilities {
    .padding {
        @apply px-8 py-12 sm:px-20 sm:py-20;
    }

    .padding-x {
        @apply px-8 sm:px-20;
    }

    .padding-y {
        @apply py-12 sm:py-20;
    }

    .margin-x {
        @apply mx-[5.5rem];
    }
}

